--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/adelina
 spring.datasource.username=postgres
 spring.datasource.password=28041955
 
-spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
+#spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
 
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.hbm2ddl.auto
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.hbm2ddl.auto=update
